<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/estilo_textview"
        android:text="@string/peso"/>

    <EditText
        android:id="@+id/edit_peso"
        style="@style/estilo_edit"/>

    <TextView
        style="@style/estilo_textview"
        android:text="@string/altura"/>

    <EditText
        android:id="@+id/edit_altura"
        style="@style/estilo_edit"/>

    <Spinner
        android:spinnerMode="dialog"
        android:id="@+id/spinner"
        android:entries="@array/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"
            android:id="@+id/radio_feminino" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:id="@+id/radio_masculino" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/estio_base">

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/calcular"/>
        <Button
            android:id="@+id/bt_limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/limpar"/>


    </LinearLayout>

    <TextView
        android:id="@+id/nu_imc"
        style="@style/estilo_textview"
        android:text="@string/valorImc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/re_imc"
        style="@style/estilo_textview"
        android:text="@string/imc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>

</ScrollView>